# ws-protocol

cpp/foxglove-websocket/: CMakeLists.txt
cpp/foxglove-websocket/cmake/: foxglove_websocketConfig.cmake.in
cpp/foxglove-websocket/include/foxglove/websocket/: websocket_server.hpp
cpp/foxglove-websocket/src/: serialization.cpp
